@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.mnemosyne"
-    android:versionCode="8"
-    android:versionName="1.1.2" >
+    android:versionCode="9"
+    android:versionName="1.1.3" >
 
     <uses-sdk android:minSdkVersion="9" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
